--- a/SverigeVaderApp/Pages/HistoricalWeather.cshtml
+++ b/SverigeVaderApp/Pages/HistoricalWeather.cshtml
@@ -4,6 +4,7 @@
 @{
     ViewData["Title"] = "Statistik";
     measurement = Model.Measurements[0];
+    TimeZoneInfo ectZone = TimeZoneInfo.FindSystemTimeZoneById("Central Europe Standard Time");
 }
 
 <div class="text-center pb-4" style="color: #415A6D">
@@ -61,10 +62,12 @@
             <tr>
                 <th scope="row">@item.City</th>
                 <td>
-                    @item.Date.ToLocalTime().ToShortDateString()
+                    @TimeZoneInfo.ConvertTimeFromUtc(item.Date, ectZone).ToString("yyyy-MM-dd")
+                    @*@item.Date.ToLocalTime().ToString("yyyy-MM-dd")*@
                 </td>
                 <td>
-                    @item.Date.ToLocalTime().ToShortTimeString()
+                    @TimeZoneInfo.ConvertTimeFromUtc(item.Date, ectZone).ToString("HH:mm")
+                    @*@item.Date.ToLocalTime().ToString("H:mm")*@
                 </td>
 
                 @if (item.Record.Description != null)
