--- a/SverigeVaderApp/Pages/Statistics.cshtml
+++ b/SverigeVaderApp/Pages/Statistics.cshtml
@@ -1,6 +1,7 @@
 ﻿@page
 @model SverigeVaderApp.Pages.StatisticsModel
 @{
+    ViewData["Title"] = "Statistik";
 }
 
 <div class="text-center pb-4" style="color:#415A6D">
